--- a/slides/themes/mytheme/css/slides.scss
+++ b/slides/themes/mytheme/css/slides.scss
@@ -36,6 +36,14 @@ p {
   text-align: left;
 }
 
+p img {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .reveal ul {
   display: block !important;
 }
